Update on Overleaf.

--- a/report.tex
+++ b/report.tex
@@ -64,7 +64,7 @@
 % Use custom title page to adhere to project manual
 \noindent \LARGE{\textbf{Backup Restoration Test System}}
 \bigbreak
-\noindent \large{Status Report (semester 1)}
+\noindent \large{Final Report (semester 1)}
 \bigbreak
 \noindent \Large{Rob Shelly}
 \bigbreak
