Completed Documentation section and Sprint 2

--- a/bibliography/bibtex.bib
+++ b/bibliography/bibtex.bib
@@ -217,6 +217,14 @@
 	url = {https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS},
 	date = {15},
 	month = {11},
-	year = {2017}
+	year = {2017},
 	urldate = {2017-12-04},	
+}
+
+@online{swagger,	
+  author = {Swagger},
+  title = {Swagger: The Worlds Most Popular API Tooling},
+  url = {https://swagger.io/},
+  year = {2017},
+  urldate = {2018-03-22},	
 }
