Added sprint 3 and 4 retrospectives

--- a/body/design.tex
+++ b/body/design.tex
@@ -12,7 +12,7 @@
 			\setlength{\belowcaptionskip}{15pt plus 3pt minus 2pt}
 			\caption{Diagram of System Architecture}
 			\centering
-			\includegraphics[scale=0.5,keepaspectratio]{diagram}
+			\includegraphics[scale=0.5,keepaspectratio]{system-architecture}
 			\label{fig:diagram}
 		\end{figure}
 		
