--- a/body/implementation.tex
+++ b/body/implementation.tex
@@ -146,8 +146,118 @@
   
   Having completed the sprint I now feel that separating the API and UI was a much more productive approach. Swagger, which was used to document the API also contains a feature to test the the documented API calls. Therefore, by focusing only on writing and documenting the API, I was able to stay in the mindset of the API functions without having to constantly transition between developing API calls and UI elements, while still being able to test the functions using Swagger.
   
+   \subsection{Sprint 3}
+   \subsubsection{Sprint Planning}
+   Planning for this sprint focused two main areas first of the which was to finalise the backend API. The plan set out with the product owners prior to the previous sprint decitated that the backend API should be completed before focusing on the UI. Therefore, in accordance with the actions dictated during the previous retrospective, finishing the last remaining tickets concerning the API would be the initial focus of this sprint.
    
-
+   Given that there was only a small number of API related tickets remaining on the backlog, the second of this sprint was beginning work on the UI. Accordingly. a number of user 
+   
+   \subsubsection{Sprint Review}
+   The sprint achieved it's goal bu completing the final API related tickets and implementing the first features of the UI. The following API functions were completed:
+   \begin{itemize} 
+     \item API function to list all SSH keys;
+     \item API function to list all GPG keys;
+     \item API function to delete an SSH key;
+     \item API function to delete a GPG key.
+   \end{itemize}
+   Additionally, the following UI elements were created:
+  \begin{itemize} 
+    \item A web form to run a single backup restoration;
+    \item A page displaying the results of recent backup restorations;
+    \item A web form to schedule regular backup restorations.
+  \end{itemize}
+  
+  \subsubsection{Sprint Retrospective}
+  \textbf{What did we do well?}
+  \begin{itemize}
+   \item Having completed the all backend API calls, the MVP was clearly defined;
+   \item Time was better managed that in previous sprints, having chosen to delay the start of the sprint while working on other projects;
+   \item Burndown chart was consistent and reflective of better time management.
+  \end{itemize}
+   
+   \noindent\textbf{What could have been done better?}
+   \begin{itemize}
+     \item Communication with the product owners was bad due to time spent on other projects;
+     \item UI design highlighted an issue with the API leading to some refactoring.
+   \end{itemize}
+   
+   \noindent\textbf{Actions}
+   \begin{itemize}
+     \item Rob Shelly to decide if a CLI should be implemented.
+   \end{itemize}
+   
+   \subsubsection{Sprint Burndown}
+   
+   \begin{figure}[H]
+     \setlength{\belowcaptionskip}{15pt plus 3pt minus 2pt}
+     \caption{Sprint 3 Burndown Chart}
+     \centering
+     \includegraphics[width=\textwidth,keepaspectratio]{burndown-sprint-3}
+     \label{fig:burndown-sprint-2}
+   \end{figure}
+   
+   \subsubsection{Personal Reflection}
+   I was happy to complete the backend during this sprint, allowing time to begin working on the UI without need to worry about the underlying API calls. This reinforced benefit of product owners recommendation to complete the API before beginning the UI. However, beginning work on the UI did highlight an issue with the backend. During UI work I realised that a had not created one of the necessary function calls. Although it was a simple solution to create the API call when needed, the time needs to do so was a setback on UI work.
+   
+   I felt my time management was much better during this sprint. Previous sprints featured periods of inactivity due to time spent on other projects. This was indicated by inconsistent burndown charts. Therefore I chose to delay the start of this sprint while I worked on other projects. This allowed my to focus on this project for the duration of the sprint once it commenced. This was reflected in a much more consistent burndown chart.
+   
+   During this sprints retrospective the product owners mentioned the possibility of creating a command line interface (CLI) for the system. A CLI would allow more advance users to user the system without the need to visit the UI. This is something the product owners have indicated is a common desire amongst more advanced user who are more comfortable using the command line. I was disappointed that this thought has not occurred to me during project planning. At this stage of development, undertaking such a task might not be feasible, or may detract from my ability to implement a satisfactory UI. I felt that my two options for an MVP were to either focus entirely on the UI or reduce some UI features and also implement a CLI. I was decided with the product owners that I should make the decisions prior to commencing my next sprint.
+   
+   \subsection{Sprint 4}
+   \subsubsection{Sprint Planning}
+    Having completed work on the API during the previous sprint, this sprint focused heavily on creating the UI. During the planning phase of this sprint a decision was made to focus entirely on the UI for the purpose of creating an MVP and that CLI would be implemented in a future version. Therefore, it was decided that the remaining UI related ticket should all be completed during this sprint.
+   
+   \subsubsection{Sprint Review}
+   This sprint achieved it's goal of finishing the remaining UI related tickets. The following UI elements were created:
+   \begin{itemize}
+     \item A web form to add SSH keys;
+     \item A web form to remove SSH keys;
+     \item A web form to add GPG keys;
+     \item A web form to remove GPG keys;
+     \item A web form to modify a scheduled restoration;
+     \item A web page to display all schedules;
+     \item A web page to display all results of a given schedule.
+    \end{itemize}
+    This sprint added to email notification function to the system.
+    
+    \subsubsection{Sprint Retrospective}
+    \textbf{What did we do well?}
+    \begin{itemize}
+      \item Time management was good, resulting in a consistent burndown chart;
+      \item A decision and justified was made regarding the implementation of a CLI;
+      \item Communication with the product owners was good, including keeping them up to date on the decision to focus on the UI.
+    \end{itemize}
+    
+    \noindent\textbf{What could have been done better?}
+    \begin{itemize}
+      \item Email notification system should have been implemented earlier;
+      \item Implementation of the email system highlight an issues with system design.
+    \end{itemize}
+    
+    \noindent\textbf{Actions}
+    \begin{itemize}
+      \item Rob Shelly to consider how to package final product.
+    \end{itemize}
+    
+    \subsubsection{Sprint Burndown}
+    
+    \begin{figure}[H]
+      \setlength{\belowcaptionskip}{15pt plus 3pt minus 2pt}
+      \caption{Sprint 4 Burndown Chart}
+      \centering
+      \includegraphics[width=\textwidth,keepaspectratio]{burndown-sprint-4}
+      \label{fig:burndown-sprint-3}
+    \end{figure}
+    
+    \subsubsection{Personal Reflection}
+    I was very pleased with the result of this sprint having completed the UI work. At this point an MVP was almost complete. I was very happy that I had taken the product owners advice to separate work on the backend and frontend. The benefits of this decision really showed during this sprint when I was able to focus almost exclusively on the UI, except for some minor refactoring.
+    
+    Prior to starting this sprint I made the decision to focus on implementing a comprehensive UI for the MVP, choosing to push the CLI to the backlog and implemented it for during version 2. Due to the limited time to completed this project I felt that I could not satisfactorily implement both a UI and CLI. The only option would have been to complete only basic user features for the UI and advanced user features for the CLI. However, believe in order to deliver a useable and demonstrable system that at least one of the interfaces should be completed in it's entirety. Thus, made the decision to focus on the UI, which graphically emphasises the results of restorations. 
+   
+    During this week I also completed work on the email notification system. In retrospect I should implemented this function earlier as notification of failed backups is a main objective of the system. Also, during the development of the function a flaw in the systems logic was noticed which may cause the system to fail to notify the users when a backup process has not succeeded. Although I fix was easily implemented, it would have been preferable to notice and overcome this issues eariler in development.
+    
+   In accordance with the actions listed during the previous retrospective, prior to commencing this sprint some consideration was given to packaging the final product. Previously the plan had been to package the UI as a Docker image, while the Jenkins backend would run on an AWS instance. This however would require some setup of the systems. Therefore, it was decided that if possible the system should be packaged entirely within a single Docker image.
+   
 	\subsection{Sprint n}
 
 	\subsection{Sprint Metrics}
